--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage":"http://division-sama.github.io/finalReact",
+  "homepage":"https://github.com/division-sama/finalReact.git",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +13,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
